# 3D_human_body_capture

./: .gitignore  README.md  requirements_v3_numpy1.21.txt
install/: local_setup.sh  setup.sh
install/apriltag_msgs/share/apriltag_msgs/: local_setup.sh  package.sh
install/apriltag_ros/lib/apriltag_ros/: apriltag_node
install/apriltag_ros/share/apriltag_ros/: local_setup.sh  package.sh
install/astra_camera/lib/astra_camera/: list_devices_node
install/astra_camera/share/astra_camera/: package.sh
install/astra_camera_msgs/share/astra_camera_msgs/: local_setup.sh  package.sh
install/calib_correspondences/lib/calib_correspondences/: corr_subscriber  image_cloud_reader  rosbag_reader
install/calib_correspondences/share/calib_correspondences/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_msgs/share/custom_msgs/: package.sh  package.xml
install/datos_camara/share/datos_camara/: local_setup.sh  package.sh
install/detection_aruco/share/detection_aruco/: package.bash  package.sh
install/detection_astra_camera/lib/detection_astra_camera/: obtain_data_astra
install/detection_astra_camera/share/detection_astra_camera/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/detection_human_ros/lib/detection_human_ros/: obtain_human
install/detection_human_ros/share/detection_human_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/detection_person/lib/detection_person/: obtain_person
install/detection_person/share/detection_person/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/get_body_reconstruction/lib/get_body_reconstruction/: form_body
install/get_body_reconstruction/share/get_body_reconstruction/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my-test-package/share/my-test-package/: package.sh
install/obtain_data_calibration/lib/obtain_data_calibration/: obtain_calibration  obtain_data_astra  obtain_data_calibration
install/obtain_data_calibration/share/obtain_data_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pcl_example/lib/pcl_example/: pcl_example_node
install/pcl_example/share/pcl_example/: local_setup.sh  package.sh  package.xml
log/: latest_build
src/apriltag_ros/cfg/: tags_36h11.yaml
src/astra_camera/: README.MD
src/astra_camera/astra_camera/launch/: multi_astra.launch.py
src/calib_correspondences/: CMakeLists.txt  Doxyfile  package.xml
src/calib_correspondences/config/: parameters.yaml  params_usb0.yaml
src/calib_correspondences/include/: Calibration.hpp  CorrespondencesSub.hpp  ImageCloud2Correspondences.hpp  Parameters.hpp  ProcessSensorData.hpp  SyncPair.hpp  Types.hpp  auxiliar.h
src/calib_correspondences/launch/: imgcloud2corr_launch.xml
src/calib_correspondences/src/: Calibration.cpp  CorrespondencesSub.cpp  ImageCloud2Correspondences.cpp  Parameters.cpp  ProcessSensorData.cpp  auxiliar.cpp
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: Plane.msg  PointsCamera.msg
src/detection_aruco/: package.xml  setup.py
src/detection_aruco/detection_aruco/: detection_aruco.py
src/detection_aruco/log/: latest_build
src/detection_aruco/src/datos_camara/: CMakeLists.txt
src/detection_aruco/src/detection_aruco/: setup.cfg  setup.py
src/detection_astra_camera/: package.xml  setup.cfg  setup.py
src/detection_astra_camera/detection_astra_camera/: obtain_data_astra.py
src/detection_human_ros/: setup.cfg  setup.py
src/detection_human_ros/detection_human_ros/: detection_human.py
src/detection_person/: package.xml  setup.cfg  setup.py
src/detection_person/custom_msgs/: CMakeLists.txt  package.xml
src/detection_person/detection_person/: detection_person.py
src/get_body_reconstruction/: setup.cfg  setup.py
src/obtain_data_calibration/: setup.cfg  setup.py
src/pcl_example/: CMakeLists.txt
src/pcl_example/src/: pcl_example_node.cpp
(+133 files in other folders)
