<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calib_correspondences</name>
  <version>0.0.0</version>
  <description>Calibration of a two camera system based on planes data read from a ros2 node that provides data in the custom format CorrespondencesVec</description>
  <maintainer email="dominik.aigner@uni-ulm.de">dominik</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
